# hdf5test

./: .gitignore  Documentation  Documentation.md  KMDS__OPER_P___10M_OBS_L2_201201010000.nc  KMDS__OPER_P___10M_OBS_L2_201201010010.nc  KMDS__OPER_P___10M_OBS_L2_201201010020.nc  KMDS__OPER_P___10M_OBS_L2_201201010030.nc  KMDS__OPER_P___10M_OBS_L2_201201010040.nc  Makefile  README.md  config.bash  pyproject.toml  requirements.txt  sample.h5
database/: tabledef.sql
hdf5test/: example.py
knmi_client/: README.md  pyproject.toml  setup.py
knmi_client/.openapi-generator/: FILES
knmi_client/docs/: DefaultApi.md  FileDownload.md  FileSummary.md  ListFilesResponse.md
knmi_client/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
knmi_client/openapi_client/api/: default_api.py
knmi_client/openapi_client/models/: __init__.py  file_download.py  file_summary.py  list_files_response.py
knmi_client/test/: test_default_api.py  test_file_download.py  test_file_summary.py  test_list_files_response.py
openapi/: knmi.json
src/hdf5test/: datafiles.py  example.py  knmi_api.py  loadnetcf.py  netcdf.py  temperature.py
tests/: test_basic.py
